libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/unknown-special-form.jsonc
//@ run: fail
//@ description: Check if we error out if the special form is unknown
["::kernel::special_form::headpat"]
//~^ERROR This special form path is invalid
